kubernetes/apps/news/freshrss/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: freshrss
  labels:
    app.kubernetes.io/name: freshrss
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: freshrss
  ports:
    - name: http
      port: 8080
      targetPort: http
    - name: metrics
      port: 9090
      targetPort: metrics
